[package]
name = "cert_manager"
version = "0.1.0"
authors = ["dskleingeld <dskleingeldgmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "2", features = ["rustls"] }
actix-files = "0.2"
acme-lib = "0.6"
actix-rt = "1"
serde = "1"