[package]
name = "cert_tools"
version = "0.1.0"
authors = ["dskleingeld <dskleingeldgmail.com>"]
edition = "2018"

[lib]
name = "cert_manager"
path = "src/lib.rs"

[[bin]]
name = "cert_updater"
path= "src/main.rs"

[dependencies]
actix-web = { version = "2", features = ["rustls"] }
actix-files = "0.2"

async-std = "1.5"
actix-rt = "1"

futures = "0.3"
acme-lib = "0.6"
structopt = "0.3"

serde = "1"
serde_yaml = "0.8"

log = "0.4"
simple_logger = "1"